--- a/frontend/form.html
+++ b/frontend/form.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		<title>Form Builder</title>
-    	<link rel="stylesheet" type="text/css" href="Sign_in.css">
+    	<link rel="stylesheet" type="text/css" href="../public/css/Sign_in.css">
     	<!-- Bootstrap Core CSS -->
-    	<link href="css/bootstrap.min.css" rel="stylesheet">
+    	<link href="../public/css/bootstrap.min.css" rel="stylesheet">
 
     	<!-- Custom CSS -->
         <link href="css/form.css" rel="stylesheet">
-        <link href="css/landing-page.css" rel="stylesheet">
+        <link href="../public/css/landing-page.css" rel="stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
